Several Alignment Issues [fixes #114]

--- a/styles.css
+++ b/styles.css
@@ -34,10 +34,10 @@ ul {
   list-style: none;
 }
 
-.header b:hover{
+.header b:hover {
   color: rgb(211, 211, 211);
 }
-.nav-link:hover{
+.nav-link:hover {
   background-color: #a92224;
   border: none;
   border-radius: 10px;
@@ -96,32 +96,32 @@ ul {
   height: auto;
 }
 
-.logo{
+.logo {
   width: 40px;
 }
-.scp{
+.scp {
   text-align: center;
   padding: 8% 8% 0%;
 }
-.scp-1{
+.scp-1 {
   text-align: center;
   padding-bottom: 0%;
 }
-p{
+p {
   text-align: center;
- color: #24262b;
- font-size:1.3rem ;
- padding-top: 3%;
+  color: #24262b;
+  font-size: 1.3rem;
+  padding-top: 3%;
 }
 
 .owner-img {
-    width: 50%;
-    height: 50%;
-    border-radius: 25px;
-    display: flex;
-    position: relative;
-    margin-left: 3%;
-    margin-bottom: 35%;
+  width: 50%;
+  height: 50%;
+  border-radius: 25px;
+  display: flex;
+  position: relative;
+  /* margin-left: 3%; */
+  /* margin-bottom: 35%; */
 }
 
 .bgimg {
@@ -150,19 +150,17 @@ p{
 .logo-img {
   height: 100%;
   display: flex;
-  width: 40%;
 }
-
 
 /* CONTACT FORM STYLES */
 #contact::before {
-  content: "";
+  /* content: "";
   width: 100%;
   height: 100%;
   opacity: 0.7;
   z-index: -1;
   position: absolute;
-  background: url("../contact-us.jpg") no-repeat center center/cover;
+  background: url("../contact-us.jpg") no-repeat center center/cover; */
 }
 
 #contact-box {
@@ -206,7 +204,6 @@ p{
   padding: 60px;
   /* font-family: "Montserrat", sans-serif; */
 }
-
 
 /* FOOTER STYLES */
 
@@ -275,7 +272,18 @@ p{
   background-color: #ffffff;
 }
 
-
+.custom-flex {
+  padding: 100px;
+  display: flex;
+  flex-direction: row;
+}
+@media (max-width: 767px) {
+  .custom-flex {
+    padding: 10px;
+    flex-direction: column;
+    align-items: center;
+  }
+}
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -293,7 +301,7 @@ input[type="number"] {
     width: 50%;
     margin-bottom: 30px;
   }
-  .nav-link:hover{
+  .nav-link:hover {
     width: 20%;
   }
 }
@@ -301,7 +309,7 @@ input[type="number"] {
   .footer-col {
     width: 100%;
   }
-  .nav-link:hover{
+  .nav-link:hover {
     width: 20%;
   }
 }
